# ggp

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
